# DQAR-new

./: .gitignore  README.md  pyproject.toml  training_data.json
colab/: Experiments.ipynb
configs/: default.yaml
docs/: REPORT_NOTES.md  presentation_outline.md
dqar/: __init__.py
dqar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dqar/cache/: __init__.py  kv_cache.py
dqar/core/: __init__.py  entropy.py  quantization.py  reuse_gate.py  snr.py
dqar/evaluation/: __init__.py  metrics.py  profiling.py
dqar/integration/: __init__.py  attention_processor.py  dit_wrapper.py  manager.py  samplers.py
dqar/policy/: __init__.py  layer_scheduler.py  mlp_policy.py
dqar/training/: __init__.py  policy_trainer.py
dqar/utils/: __init__.py  helpers.py
outputs/: dqar_stats.json
policy_checkpoints/: best_model.pt  checkpoint_epoch_19.pt  checkpoint_epoch_9.pt  final_policy.pt  training_history.json
report/: main.tex  ref.bib
report/arxiv/: main.tex
report/figures/: README.txt
results/: ABLATION_REPORT.md
results/NVIDIA_A100-SXM4-40GB/: ablation_results.json
results/NVIDIA_A100-SXM4-40GB-phase-1/: ABLATION_REPORT.md
results/NVIDIA_A100-SXM4-40GB-phase-2/: ABLATION_REPORT.md  ablation_results.json
results/T4_GPU/: ABLATION_REPORT_T4_GPU.md  ablation_results_t4_gpu.json
results/fid_eval/: fid_results.json
scripts/: benchmark_config.py  evaluate.py  evaluate_adaptive.py  evaluate_fid.py  layer_sweep.py  memory_profile.py  run_ablations.py  run_inference.py  sweep_combined.py  sweep_entropy_threshold.py  sweep_snr_threshold.py  train_policy.py  tune_hyperparameters.py  tune_snr_entropy.py  warmup_sweep.py
tests/: __init__.py  test_cache_policy.py  test_core.py
(+14 files in other folders)
